# app-reviews

./: .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  dependency-review.yml  docs.yml  release.yml  scheduled_e2e_test.yml
contributing/: index.html
docs/: cli.md  configuration.md  contributing.md  index.md  quickstart.md
docs/api/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: authentication.md  cli.md  export.md  python-api.md  tui.md
docs/reference/: how-it-works.md  models.md
docs/stylesheets/: extra.css
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/authentication/: index.html
guide/export/: index.html
guide/python-api/: index.html
guide/tui/: index.html
reference/how-it-works/: index.html
reference/models/: index.html
scripts/: check.sh  release.sh  setup.sh
search/: search_index.json
src/app_reviews/: __init__.py  client.py  errors.py  scraper.py
src/app_reviews/clients/: __init__.py  appstore.py  appstore_reviews.py  appstore_search.py  googleplay.py  googleplay_reviews.py  googleplay_search.py
src/app_reviews/core/: __init__.py  checkpoints.py  dedupe.py  execution.py  filters.py  inputs.py  json_store.py  provider_selection.py
src/app_reviews/exporters/: __init__.py  csv.py  json.py  jsonl.py
src/app_reviews/models/: __init__.py  auth.py  callback.py  checkpoint.py  config.py  country.py  export.py  metadata.py  proxy.py  result.py  retry.py  review.py  sort.py  types.py
src/app_reviews/providers/: base.py
src/app_reviews/tui/: __init__.py  app.py
src/app_reviews/utils/: __init__.py  http.py  jwt.py  metadata.py  retry.py  text.py
src/app_reviews_tui/: __init__.py  app.py  sorting.py
src/app_reviews_tui/screens/: confirm_fetch.py  country_select.py  fetching.py  review_browser.py
src/app_reviews_tui/widgets/: filter_bar.py  rating_bar.py  review_card.py
src/appstore_reviews/: __init__.py  cli.py  scraper.py
src/appstore_reviews/auth/: connect.py
src/appstore_reviews/config/: __init__.py  env.py  loaders.py  models.py
src/appstore_reviews/core/: __init__.py  cache.py  checkpoints.py  dedupe.py  execution.py  inputs.py  provider_selection.py
src/appstore_reviews/exporters/: csv.py  json.py  jsonl.py
src/appstore_reviews/models/: __init__.py  result.py  review.py
src/appstore_reviews/providers/: client.py  connect.py  connect_normalizer.py  retry.py  rss.py  rss_normalizer.py
tests/: conftest.py  test_client.py  test_deprecation.py
tests/app_reviews/: conftest.py  test_appstore_search.py  test_base_search.py  test_client.py  test_googleplay_search.py  test_search_exports.py
tests/app_reviews/auth/: test_auth.py  test_google_auth.py  test_service_account_credentials.py
tests/app_reviews/core/: test_app_info.py  test_execution.py  test_inputs.py
tests/app_reviews/e2e/: test_end_to_end.py  test_live.py  test_search_live.py
tests/app_reviews/models/: test_config.py  test_country.py  test_metadata_icon.py  test_result.py  test_retry.py  test_review.py  test_sort.py
tests/app_reviews/providers/: test_providers.py
tests/app_reviews/utils/: test_http.py  test_jwt.py  test_metadata.py  test_retry.py  test_text.py
tests/app_reviews_tui/: test_app.py  test_review_browser.py
tests/cli/: test_config_validate_command.py  test_fetch_command.py  test_inspect_command.py
tests/core/: test_filters.py
tests/e2e/: test_end_to_end.py  test_live.py
tests/fixtures/config/: sample.yaml
tests/fixtures/connect/: reviews.json
tests/integration/: test_auth.py  test_config.py  test_export.py  test_providers.py  test_state.py
tests/models/: test_callback.py  test_country.py  test_result.py  test_sort.py
tests/tui/: test_app.py  test_review_browser.py
tests/unit/: test_dedupe.py  test_inputs.py  test_provider_selection.py  test_retry.py
(+31 files in other folders)
